--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -16,6 +16,8 @@
     width: 30px;
     height: 30px;
     margin: 5px 10px 5px 10px;
+    background: url(./../assets/logo.svg) no-repeat;
+    background-size: contain;
 }
 
 .hambuguer-menu:hover, .close-menu:hover {
