--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -13,7 +13,8 @@
 }
 
 .logo {
-    width: 30px;
+    flex-basis: 30px;
+    flex-shrink: 0;
     height: 30px;
     margin: 5px 10px 5px 10px;
     background: url(./../assets/logo.svg) no-repeat;
