--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -17,7 +17,7 @@
     flex-shrink: 0;
     height: 30px;
     margin: 5px 10px 5px 10px;
-    background: url(./../assets/logo.svg) no-repeat;
+    background: url(../assets/logo.svg) no-repeat;
     background-size: contain;
 }
 
@@ -64,10 +64,12 @@
 .close-menu {
     position: absolute;
     right: 0;
-    top: 8px;
-    transform: translate(110%);
-    width: 30px;
-    color: #E0E0DE;
+    top: 10px;
+    transform: translate(140%);
+    width: 22px;
+    height: 22px;
+    background: url(../assets/close-menu.svg) no-repeat;
+    background-size: contain;
 }
 
 .menu-toggle {
